category search fix

--- a/tools/clipboard/index.html
+++ b/tools/clipboard/index.html
@@ -111,9 +111,9 @@
                                     });
 
                                     if (resultCount > 0) {
-                                        category.titleElement.style.display = "block";
+                                        category.containerElement.style.display = "flex";
                                     } else {
-                                        category.titleElement.style.display = "none";
+                                        category.containerElement.style.display = "none";
                                     }
                                 });
                             }
